@@ -152,7 +152,9 @@
         </fieldset>
 
         <div class="buttons">
-          <input type="hidden" name="user" value="${user}" />
+          <input type="hidden" name="max_per_page"
+                 value="$max_per_page" />
+          <input type="hidden" name="user" value="$user" />
           <input type="submit" name="update"
                  value="${dgettext('acct_mgr', 'Refresh')}" />
         </div>
